--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
   font-size: 30px;
   background-color: rgb(119,134,241);
 }
+.bttonn-color:hover {
+  font-size: 30px;
+  background-color: rgb(118, 130, 220) !important;
+}
 
 
 .shadow-color{
